c/examples/writing-a-c-compiler-tests/tests/chapter_9/valid/no_arguments/multiple_declarations.c
int main(void) {
    int f(void);
    int f(void);
    return f();
}

int f(void) {
    return 3;
}