c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_parse/fun_decl_for_loop.c
int main(void) {
    /* Function declarations aren't permitted in for loop headers. */
    for (int f(void); ; ) {
        return 0;
    }
}